{
  "version": 4,
  "terraform_version": "1.5.4",
  "serial": 110,
  "lineage": "b7ed8021-bd53-333d-7965-f1ef73e63b01",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "one",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0262dc7ecab52abb8",
            "associate_with_private_ip": "10.0.1.10",
            "association_id": "eipassoc-0a6eaa2efb1d7946b",
            "domain": "vpc",
            "id": "eipalloc-0262dc7ecab52abb8",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-01170674ba6f44ce6",
            "private_dns": "ip-10-0-1-10.ap-south-1.compute.internal",
            "private_ip": "10.0.1.10",
            "public_dns": "ec2-65-0-35-154.ap-south-1.compute.amazonaws.com",
            "public_ip": "65.0.35.154",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_network_interface.test",
            "aws_security_group.allow_web",
            "aws_subnet.main",
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f5ee92e2d63afc18",
            "arn": "arn:aws:ec2:ap-south-1:126130839183:instance/i-069e01463d3d8067b",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-069e01463d3d8067b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "key-tf",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-01170674ba6f44ce6"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-01170674ba6f44ce6",
            "private_dns": "ip-10-0-1-10.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.10",
            "public_ip": "65.0.35.154",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-071247a1aad062042",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-075db04c8b58be4db",
            "tags": {
              "Name": "first_instance"
            },
            "tags_all": {
              "Name": "first_instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c3c58e34dbe78ccf"
            ]
          },
          "dependencies": [
            "aws_key_pair.key-tf",
            "aws_network_interface.test",
            "aws_security_group.allow_web",
            "aws_subnet.main",
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:126130839183:internet-gateway/igw-049e6ba7e0189b08d",
            "id": "igw-049e6ba7e0189b08d",
            "owner_id": "126130839183",
            "tags": {
              "Name": "internet_gateway"
            },
            "tags_all": {
              "Name": "internet_gateway"
            },
            "vpc_id": "vpc-0ac1564da7ab018a1"
          },
          "dependencies": [
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:126130839183:network-interface/eni-01170674ba6f44ce6",
            "id": "eni-01170674ba6f44ce6",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:7c:fd:db:39:c6",
            "owner_id": "126130839183",
            "private_ip": "10.0.1.10",
            "private_ip_list": [
              "10.0.1.10"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.1.10"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0c3c58e34dbe78ccf"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-075db04c8b58be4db"
          },
          "dependencies": [
            "aws_security_group.allow_web",
            "aws_subnet.main",
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:126130839183:route-table/rtb-037e9014cc8ff3867",
            "id": "rtb-037e9014cc8ff3867",
            "owner_id": "126130839183",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-049e6ba7e0189b08d",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ac1564da7ab018a1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b95214d522db1251",
            "route_table_id": "rtb-037e9014cc8ff3867",
            "subnet_id": "subnet-075db04c8b58be4db"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.example",
            "aws_subnet.main",
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:126130839183:security-group/sg-0c3c58e34dbe78ccf",
            "description": "Allow HTTPS to web server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c3c58e34dbe78ccf",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP ingress",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS ingress",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH ingress",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow web traffic",
            "name_prefix": "",
            "owner_id": "126130839183",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_web_traffic"
            },
            "tags_all": {
              "Name": "allow_web_traffic"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ac1564da7ab018a1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:126130839183:subnet/subnet-075db04c8b58be4db",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-075db04c8b58be4db",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "126130839183",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Main"
            },
            "tags_all": {
              "Name": "Main"
            },
            "vpc_id": "vpc-0ac1564da7ab018a1"
          },
          "dependencies": [
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "dev-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:126130839183:vpc/vpc-0ac1564da7ab018a1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03ca7940666c8a9b8",
            "default_route_table_id": "rtb-0b6c30e130729dd52",
            "default_security_group_id": "sg-0c55978c3efcf425a",
            "dhcp_options_id": "dopt-0f0fa352d3c4f47d0",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ac1564da7ab018a1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b6c30e130729dd52",
            "owner_id": "126130839183",
            "tags": {
              "Name": "Dev_VPC"
            },
            "tags_all": {
              "Name": "Dev_VPC"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:126130839183:vpc/vpc-08661a9a4a5806a7c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d55793f8559c7528",
            "default_route_table_id": "rtb-0bc1a1549aa631dd2",
            "default_security_group_id": "sg-0d19061aa477cf40f",
            "dhcp_options_id": "dopt-0f0fa352d3c4f47d0",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08661a9a4a5806a7c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0bc1a1549aa631dd2",
            "owner_id": "126130839183"
          }
        }
      ]
    }
  ]
}